a few graph tweaks, loading spinners

--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -110,6 +110,7 @@
                     <div id="card1">
                         <h2 id="card1-title"></h2>
                         <h3 id="card1-subtitle"></h3>
+                        <div class="loader">Loading...</div>
                         <div id="chart0"></div>
                         <div id="chart0-options" class="btn-group" data-toggle="buttons">
                             <label class="btn btn-primary">
@@ -136,6 +137,7 @@
 
                     <div id="card2">
                         <h2 id="card2-title">Usage by Site</h2>
+                        <div class="loader">Loading...</div>
                         <div id="chart1"></div>
                         <div id="chart1-options" class="btn-group" data-toggle="buttons">
                             <label class="btn btn-primary active">
