--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Mew</title>
+    <title>See Progress</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/toastr.min.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
@@ -22,8 +22,9 @@
     <div id="body-container">
         <div id="card0" class="full-width">
             <div id="header">
-                <div id="title" class="inline">
-                    <h1>cProgress</h1>
+                <div id="logo" class="inline">
+                    <h1 id="logo1" class="inline">see</h1>
+                    <h1 id="logo2" class="inline">progress</h1>
                 </div>
                 <div id="nav" class="inline">
                     <div class="nav-part inline">
