--- a/server/static/css/graph.css
+++ b/server/static/css/graph.css
@@ -56,9 +56,6 @@ body {
     justify-content: space-between;
 }
 
-#title {
-}
-
 #nav {
     width: 550px;
     display: flex;
@@ -341,7 +338,7 @@ body {
 }
 
 #card2 .loader:before, #card2 .loader:after {
-    background: #f0f0ea;;
+    background: #f0f0ea;
 }
 
 
