--- a/server/templates/login.html
+++ b/server/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>mew login</title>
+    <title>See Progress - Login</title>
     <link rel="stylesheet" href="static/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="stylesheet" href="static/css/login.css">
@@ -16,7 +16,10 @@
     <div id="login-card-wrapper">
         <div id="login-card" class="row">
             <div id="login-card-left" class="col-sm-4">
-                <h1 class="text-center">mew</h1>
+                <div id="logo" class="inline">
+                    <h1 id="logo1" class="inline">see</h1>
+                    <h1 id="logo2" class="inline">progress</h1>
+                </div>
                 <br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac aliquet nibh, eget fringilla erat. Pellentesque varius consequat nibh eu varius. Nunc magna leo, imperdiet a nisi eget, venenatis dignissim nunc. Pellentesque a augue sed tortor mollis mollis quis eget lectus. Aenean quis egestas metus. Pellentesque a orci ante. Donec porta dignissim ligula non faucibus. Aliquam augue felis, mattis vel orci at, rutrum interdum nulla. Proin accumsan eu lectus a ullamcorper. Duis neque quam, posuere ac tellus vel, volutpat euismod ligula.</p>
             </div>
