--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -113,13 +113,13 @@
     -webkit-transition: .4s;
     transition: .4s;
 }
-input:checked + .slider {
-    background-color: #2196F3;
+.switch input:checked + .slider {
+    background-color: #31c4e9;
 }
-input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+.switch input:focus + .slider {
+    box-shadow: 0 0 1px #31c4e9;
 }
-input:checked + .slider:before {
+.switch input:checked + .slider:before {
     /*-webkit-transform: translateX(26px);*/
     -webkit-transform: translateX(23px);
     /*-ms-transform: translateX(26px);*/
@@ -135,3 +135,7 @@ input:checked + .slider:before {
     border-radius: 50%;
 }
 /* end switch */
+
+.disabled {
+    color: #888;
+}
