--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -20,15 +20,15 @@
                 <div id="quota-header">
                     <h2 id="quota-title">Quota</h2>
                     <label class="switch inline">
-                        <input type="checkbox">
+                        <input id="quota-toggle" type="checkbox">
                         <span class="slider round"></span>
                     </label>
                 </div>
                 <div>
                     <div class="form-group inline">
-                        <input type="text" placeholder="minutes" class="form-control" style="width: 100px">
+                        <input id="quota-val" type="text" placeholder="minutes" class="form-control" style="width: 100px">
                     </div>
-                    <p id="quota-label"> minutes of </p>
+                    <p id="quota-label" class="disabled"> minutes of </p>
                     <div class="form-group inline">
                         <select class="form-control" id="quota-type">
                             <option>unproductive usage</option>
