--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -160,51 +160,61 @@
                         <h2 id="card1-title"></h2>
                         <h3 id="card1-subtitle"></h3>
                         <div class="loader">Loading...</div>
-                        <div id="chart0"></div>
-                        <div id="chart0-options" class="btn-group" data-toggle="buttons">
-                            <label class="btn btn-primary">
-                                <input type="radio" name="options" id="last-hour" class="timeframe-choice" autocomplete="off">Last Hour
-                            </label>
-                            <label class="btn btn-primary">
-                                <input type="radio" name="options" id="today" class="timeframe-choice" autocomplete="off">Today
-                            </label>
-                            <label class="btn btn-primary active">
-                                <input type="radio" name="options" id="last-24" class="timeframe-choice" autocomplete="off" checked>Last 24
-                                Hours
-                            </label>
-                            <label class="btn btn-primary">
-                                <input type="radio" name="options" id="last-week" class="timeframe-choice" autocomplete="off">Last Week
-                            </label>
-                            <label class="btn btn-primary">
-                                <input type="radio" name="options" id="last-year" class="timeframe-choice" autocomplete="off">Last Year
-                            </label>
-                            <label class="btn btn-primary">
-                                <input type="radio" name="options" id="all" class="timeframe-choice" autocomplete="off">All
-                            </label>
+                        <div id="chart0-container">
+                            <div id="chart0"></div>
+                            <div id="chart0-nodata" class="hidden nodata">
+                                No data found for graph.
+                            </div>
+                            <div id="chart0-options" class="btn-group" data-toggle="buttons">
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="last-hour" class="timeframe-choice" autocomplete="off">Last Hour
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="today" class="timeframe-choice" autocomplete="off">Today
+                                </label>
+                                <label class="btn btn-primary active">
+                                    <input type="radio" name="options" id="last-24" class="timeframe-choice" autocomplete="off" checked>Last 24
+                                    Hours
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="last-week" class="timeframe-choice" autocomplete="off">Last Week
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="last-year" class="timeframe-choice" autocomplete="off">Last Year
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="all" class="timeframe-choice" autocomplete="off">All
+                                </label>
+                            </div>
                         </div>
                     </div>
 
                     <div id="card2">
                         <h2 id="card2-title">Usage by Site</h2>
                         <div class="loader">Loading...</div>
-                        <div id="chart1"></div>
-                        <div id="chart1-options" class="btn-group" data-toggle="buttons">
-                            <label class="btn btn-primary active">
-                                <input type="radio" name="options" id="last-week" class="timeframe-choice" autocomplete="off" checked>Last Week
-                            </label>
-                            <label class="btn btn-primary">
-                                <input type="radio" name="options" id="last-month" class="timeframe-choice" autocomplete="off">Last Month
-                            </label>
-                            <label class="btn btn-primary">
-                                <input type="radio" name="options" id="last-3-months" class="timeframe-choice" autocomplete="off">Last 3
-                                Months
-                            </label>
-                            <label class="btn btn-primary">
-                                <input type="radio" name="options" id="last-year" class="timeframe-choice" autocomplete="off">Last Year
-                            </label>
-                            <label class="btn btn-primary">
-                                <input type="radio" name="options" id="all" class="timeframe-choice" autocomplete="off">All
-                            </label>
+                        <div id="chart1-container">
+                            <div id="chart1"></div>
+                            <div id="chart1-nodata" class="hidden nodata">
+                                No data found for graph.
+                            </div>
+                            <div id="chart1-options" class="btn-group" data-toggle="buttons">
+                                <label class="btn btn-primary active">
+                                    <input type="radio" name="options" id="last-week" class="timeframe-choice" autocomplete="off" checked>Last Week
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="last-month" class="timeframe-choice" autocomplete="off">Last Month
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="last-3-months" class="timeframe-choice" autocomplete="off">Last 3
+                                    Months
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="last-year" class="timeframe-choice" autocomplete="off">Last Year
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="all" class="timeframe-choice" autocomplete="off">All
+                                </label>
+                            </div>
                         </div>
                     </div>
                 </div>
