--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/toastr.min.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/graph.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/settings.css') }}">
     <script src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 </head>
@@ -28,33 +29,18 @@
                     <div class="form-group inline">
                         <input id="quota-val" type="text" placeholder="minutes" class="form-control" style="width: 100px">
                     </div>
-                    <p id="quota-label" class="disabled"> minutes of </p>
+                    <p id="quota-label"> minutes of </p>
                     <div class="form-group inline">
                         <select class="form-control" id="quota-type">
-                            <option>unproductive usage</option>
-                            <option>any usage</option>
+                            <option value="unprod">unproductive usage</option>
+                            <option value="all">any usage</option>
                         </select>
                     </div>
                 </div>
             </div>
             <div class="settings-section-b">
                 <h2>Unproductive Sites</h2>
-                <div id="unprod-sites">
-                    <div class="unprod-site">
-                        <p class="site">facebook.com</p>
-                        <div class="remove-site" id="remove-site0">
-                            <img height=15 width=15 src="{{ url_for('static', filename='img/x.png') }}"/>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="unprod-site">
-                        <p class="site">reddit.com</p>
-                        <div class="remove-site" id="remove-site1">
-                            <img height=15 width=15 src="{{ url_for('static', filename='img/x.png') }}"/>
-                        </div>
-                    </div>
-                    <hr>
-                </div>
+                <div id="unprod-sites"></div>
                 <div id="add-unprod-site">
                     <img height=20 width=20 src="{{ url_for('static', filename='img/plus.png') }}"/>
                 </div>
