--- a/server/static/css/graph.css
+++ b/server/static/css/graph.css
@@ -66,7 +66,14 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 50px 15% 20px;
+    margin: 50px 20% 20px;
+}
+
+#today-no-quota {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 50px 35% 20px;
 }
 
 .nav-part {
