--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -163,7 +163,7 @@
                         <div id="chart0-container">
                             <div id="chart0"></div>
                             <div id="chart0-nodata" class="hidden nodata">
-                                No data found for graph.
+                                No data.
                             </div>
                             <div id="chart0-options" class="btn-group" data-toggle="buttons">
                                 <label class="btn btn-primary">
@@ -195,7 +195,7 @@
                         <div id="chart1-container">
                             <div id="chart1"></div>
                             <div id="chart1-nodata" class="hidden nodata">
-                                No data found for graph.
+                                No data.
                             </div>
                             <div id="chart1-options" class="btn-group" data-toggle="buttons">
                                 <label class="btn btn-primary active">
