--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -125,8 +125,8 @@
                                 </div>
                                 <div class="center-text">
                                     <div class="inline">
-                                        <div class="time-part inline"><h3 id="total-hours">05</h3></div>
-                                        <div class="time-part inline"><h3 id="total-minutes">54</h3></div>
+                                        <div class="time-part inline"><h3 id="unprod-hours">05</h3></div>
+                                        <div class="time-part inline"><h3 id="unprod-minutes">54</h3></div>
                                     </div>
                                 </div>
                                 <div class="center-text">
@@ -233,6 +233,7 @@
                 <script src="{{ url_for('static', filename='js/highcharts.js') }}"></script>
                 <script src="{{ url_for('static', filename='js/toastr.min.js') }}"></script>
                 <script src="{{ url_for('static', filename='js/util.js') }}"></script>
+                <script src="{{ url_for('static', filename='js/card0_stats.js') }}"></script>
                 <script src="{{ url_for('static', filename='js/requests.js') }}"></script>
                 <script src="{{ url_for('static', filename='js/data_processing.js') }}"></script>
                 <script src="{{ url_for('static', filename='js/bar_graph.js') }}"></script>
