quotas in hours, + validation

--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -28,7 +28,7 @@
                 </div>
                 <div>
                     <div class="form-group inline">
-                        <input id="quota-val" type="text" class="form-control" style="width: 100px">
+                        <input id="quota-val" type="text" class="form-control" style="width: 100px" onkeypress='return validateNumeric(event)'>
                     </div>
 
                     <div class="form-group inline">
