no more default values

--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -107,8 +107,8 @@
                                 </div>
                                 <div class="center-text">
                                     <div class="inline">
-                                        <div class="time-part inline"><h3 id="total-hours">08</h3></div>
-                                        <div class="time-part inline"><h3 id="total-minutes">17</h3></div>
+                                        <div class="time-part inline"><h3 id="total-hours"></h3></div>
+                                        <div class="time-part inline"><h3 id="total-minutes"></h3></div>
                                     </div>
                                 </div>
                                 <div class="center-text">
@@ -125,8 +125,8 @@
                                 </div>
                                 <div class="center-text">
                                     <div class="inline">
-                                        <div class="time-part inline"><h3 id="unprod-hours">05</h3></div>
-                                        <div class="time-part inline"><h3 id="unprod-minutes">54</h3></div>
+                                        <div class="time-part inline"><h3 id="unprod-hours"></h3></div>
+                                        <div class="time-part inline"><h3 id="unprod-minutes"></h3></div>
                                     </div>
                                 </div>
                                 <div class="center-text">
