finished with quota-percent/streak updating on settings change

--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -102,7 +102,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="{{ today_section_id }}">
+                        <div id="today" class="{{ today_section_class }}">
                             <div class="sub-today inline">
                                 <div class="center-text">
                                     <h2>time online today</h2>
