--- a/server/static/css/graph.css
+++ b/server/static/css/graph.css
@@ -69,13 +69,13 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.today {
     margin: 50px 20% 20px;
 }
 
-#today-no-quota {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.today-no-quota {
     margin: 50px 35% 20px;
 }
 
