--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -83,167 +83,163 @@
                         </h5>
                     </div>
                     <div class="vert-divider inline"></div>
-                    {% if email %}
                     <div class="nav-part inline">
                         <a id="logout-link" href="#"><h5>log out<h5></a>
-                        </div>
-                        {% else %}
-                        <div class="nav-part inline">
-                            <a href="#"><h5>login<h5></a>
-                            </div>
-                            <div class="vert-divider inline"></div>
-                            <div class="nav-part inline">
-                                <a href="#"><h5>create an account<h5></a>
-                                </div>
-                                {% endif %}
-                                <div class="vert-divider inline"></div>
-                                <div class="nav-part inline">
-                                    <img id="settings-icon" src="{{ url_for('static', filename='img/settings.png') }}"/>
-                                </div>
-                            </div>
-                        </div>
-                        <div id="today" class="{{ today_section_class }}">
-                            <div class="sub-today inline">
-                                <div class="center-text">
-                                    <h2>time online today</h2>
-                                </div>
-                                <div class="center-text">
-                                    <div class="inline">
-                                        <div class="time-part inline"><h3 id="total-hours"></h3></div>
-                                        <div class="time-part inline"><h3 id="total-minutes"></h3></div>
-                                    </div>
-                                </div>
-                                <div class="center-text">
-                                    <div class="inline">
-                                        <div class="label-part inline"><h4>hours</h4></div>
-                                        <div class="label-part inline"><h4>minutes</h4></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- <div class="vert-divider inline"></div> -->
-                            <div class="sub-today inline">
-                                <div class="center-text">
-                                    <h2>unproductive time today</h2>
-                                </div>
-                                <div class="center-text">
-                                    <div class="inline">
-                                        <div class="time-part inline"><h3 id="unprod-hours"></h3></div>
-                                        <div class="time-part inline"><h3 id="unprod-minutes"></h3></div>
-                                    </div>
-                                </div>
-                                <div class="center-text">
-                                    <div class="inline">
-                                        <div class="label-part inline"><h4>hours</h4></div>
-                                        <div class="label-part inline"><h4>minutes</h4></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- <div class="vert-divider inline"></div> -->
-                            <div id="quota-percent-section" class="sub-today inline {{ quota_streak_section }}">
-                                <div class="circle-container">
-                                    <div id="quota-percent-border" class="circle-active-border">
-                                        <div class="circle">
-                                            <span id="quota-percent" class="percent"></span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="center-text">
-                                    <h2>of quota</h2>
-                                </div>
-                            </div>
-                            <!-- <div class="vert-divider inline"></div> -->
-                            <div id="streak-section" class="sub-today inline {{ quota_streak_section }}">
-                                <div class="center-text">
-                                    <h2>streak</h2>
-                                </div>
-                                <div class="center-text">
-                                    <h3 id="streak-val"></h3>
-                                </div>
-                                <div class="center-text">
-                                    <h4>days</h4>
-                                </div>
-                            </div>
+                    </div>
+                    {% if not email %}
+                    <div class="vert-divider inline"></div>
+                    <div class="nav-part inline">
+                        <a href="#"><h5>create an account<h5></a>
+                    </div>
+                    {% endif %}
+                    <div class="vert-divider inline"></div>
+                    <div class="nav-part inline">
+                        <img id="settings-icon" src="{{ url_for('static', filename='img/settings.png') }}"/>
+                    </div>
+                </div>
+            </div>
+            <div id="today" class="{{ today_section_class }}">
+                <div class="sub-today inline">
+                    <div class="center-text">
+                        <h2>time online today</h2>
+                    </div>
+                    <div class="center-text">
+                        <div class="inline">
+                            <div class="time-part inline"><h3 id="total-hours"></h3></div>
+                            <div class="time-part inline"><h3 id="total-minutes"></h3></div>
                         </div>
                     </div>
-
-                    <div id="card1">
-                        <h2 id="card1-title"></h2>
-                        <h3 id="card1-subtitle"></h3>
-                        <div class="loader">Loading...</div>
-                        <div id="chart0-container">
-                            <div id="chart0"></div>
-                            <div id="chart0-nodata" class="hidden nodata">
-                                No data.
-                            </div>
-                            <div id="chart0-options" class="btn-group" data-toggle="buttons">
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="options" id="last-hour" class="timeframe-choice" autocomplete="off">Last Hour
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="options" id="today" class="timeframe-choice" autocomplete="off">Today
-                                </label>
-                                <label class="btn btn-primary active">
-                                    <input type="radio" name="options" id="last-24" class="timeframe-choice" autocomplete="off" checked>Last 24
-                                    Hours
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="options" id="last-week" class="timeframe-choice" autocomplete="off">Last Week
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="options" id="last-year" class="timeframe-choice" autocomplete="off">Last Year
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="options" id="all" class="timeframe-choice" autocomplete="off">All
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div id="card2">
-                        <h2 id="card2-title">Usage by Site</h2>
-                        <div class="loader">Loading...</div>
-                        <div id="chart1-container">
-                            <div id="chart1"></div>
-                            <div id="chart1-nodata" class="hidden nodata">
-                                No data.
-                            </div>
-                            <div id="chart1-options" class="btn-group" data-toggle="buttons">
-                                <label class="btn btn-primary active">
-                                    <input type="radio" name="options" id="last-week" class="timeframe-choice" autocomplete="off" checked>Last Week
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="options" id="last-month" class="timeframe-choice" autocomplete="off">Last Month
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="options" id="last-3-months" class="timeframe-choice" autocomplete="off">Last 3
-                                    Months
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="options" id="last-year" class="timeframe-choice" autocomplete="off">Last Year
-                                </label>
-                                <label class="btn btn-primary">
-                                    <input type="radio" name="options" id="all" class="timeframe-choice" autocomplete="off">All
-                                </label>
-                            </div>
+                    <div class="center-text">
+                        <div class="inline">
+                            <div class="label-part inline"><h4>hours</h4></div>
+                            <div class="label-part inline"><h4>minutes</h4></div>
                         </div>
                     </div>
                 </div>
-
-                <div id="settings-dialog" tabindex="-1">
+                <!-- <div class="vert-divider inline"></div> -->
+                <div class="sub-today inline">
+                    <div class="center-text">
+                        <h2>unproductive time today</h2>
+                    </div>
+                    <div class="center-text">
+                        <div class="inline">
+                            <div class="time-part inline"><h3 id="unprod-hours"></h3></div>
+                            <div class="time-part inline"><h3 id="unprod-minutes"></h3></div>
+                        </div>
+                    </div>
+                    <div class="center-text">
+                        <div class="inline">
+                            <div class="label-part inline"><h4>hours</h4></div>
+                            <div class="label-part inline"><h4>minutes</h4></div>
+                        </div>
+                    </div>
                 </div>
+                <!-- <div class="vert-divider inline"></div> -->
+                <div id="quota-percent-section" class="sub-today inline {{ quota_streak_section }}">
+                    <div class="circle-container">
+                        <div id="quota-percent-border" class="circle-active-border">
+                            <div class="circle">
+                                <span id="quota-percent" class="percent"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="center-text">
+                        <h2>of quota</h2>
+                    </div>
+                </div>
+                <!-- <div class="vert-divider inline"></div> -->
+                <div id="streak-section" class="sub-today inline {{ quota_streak_section }}">
+                    <div class="center-text">
+                        <h2>streak</h2>
+                    </div>
+                    <div class="center-text">
+                        <h3 id="streak-val"></h3>
+                    </div>
+                    <div class="center-text">
+                        <h4>days</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-                <script src="{{ url_for('static', filename='js/highcharts.js') }}"></script>
-                <script src="{{ url_for('static', filename='js/toastr.min.js') }}"></script>
-                <script src="{{ url_for('static', filename='js/util.js') }}"></script>
-                <script src="{{ url_for('static', filename='js/card0_stats.js') }}"></script>
-                <script src="{{ url_for('static', filename='js/requests.js') }}"></script>
-                <script src="{{ url_for('static', filename='js/data_processing.js') }}"></script>
-                <script src="{{ url_for('static', filename='js/bar_graph.js') }}"></script>
-                <script src="{{ url_for('static', filename='js/line_graph.js') }}"></script>
-                <script src="{{ url_for('static', filename='js/settings.js') }}"></script>
-                <script src="{{ url_for('static', filename='js/logout.js') }}"></script>
-                <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-                <script src="https://apis.google.com/js/platform.js?onload=onOAuthLoad" async defer></script>
-            </body>
+        <div id="card1">
+            <h2 id="card1-title"></h2>
+            <h3 id="card1-subtitle"></h3>
+            <div class="loader">Loading...</div>
+            <div id="chart0-container">
+                <div id="chart0"></div>
+                <div id="chart0-nodata" class="hidden nodata">
+                    No data.
+                </div>
+                <div id="chart0-options" class="btn-group" data-toggle="buttons">
+                    <label class="btn btn-primary">
+                        <input type="radio" name="options" id="last-hour" class="timeframe-choice" autocomplete="off">Last Hour
+                    </label>
+                    <label class="btn btn-primary">
+                        <input type="radio" name="options" id="today" class="timeframe-choice" autocomplete="off">Today
+                    </label>
+                    <label class="btn btn-primary active">
+                        <input type="radio" name="options" id="last-24" class="timeframe-choice" autocomplete="off" checked>Last 24
+                        Hours
+                    </label>
+                    <label class="btn btn-primary">
+                        <input type="radio" name="options" id="last-week" class="timeframe-choice" autocomplete="off">Last Week
+                    </label>
+                    <label class="btn btn-primary">
+                        <input type="radio" name="options" id="last-year" class="timeframe-choice" autocomplete="off">Last Year
+                    </label>
+                    <label class="btn btn-primary">
+                        <input type="radio" name="options" id="all" class="timeframe-choice" autocomplete="off">All
+                    </label>
+                </div>
+            </div>
+        </div>
 
-            </html>
+        <div id="card2">
+            <h2 id="card2-title">Usage by Site</h2>
+            <div class="loader">Loading...</div>
+            <div id="chart1-container">
+                <div id="chart1"></div>
+                <div id="chart1-nodata" class="hidden nodata">
+                    No data.
+                </div>
+                <div id="chart1-options" class="btn-group" data-toggle="buttons">
+                    <label class="btn btn-primary active">
+                        <input type="radio" name="options" id="last-week" class="timeframe-choice" autocomplete="off" checked>Last Week
+                    </label>
+                    <label class="btn btn-primary">
+                        <input type="radio" name="options" id="last-month" class="timeframe-choice" autocomplete="off">Last Month
+                    </label>
+                    <label class="btn btn-primary">
+                        <input type="radio" name="options" id="last-3-months" class="timeframe-choice" autocomplete="off">Last 3
+                        Months
+                    </label>
+                    <label class="btn btn-primary">
+                        <input type="radio" name="options" id="last-year" class="timeframe-choice" autocomplete="off">Last Year
+                    </label>
+                    <label class="btn btn-primary">
+                        <input type="radio" name="options" id="all" class="timeframe-choice" autocomplete="off">All
+                    </label>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="settings-dialog" tabindex="-1">
+    </div>
+
+    <script src="{{ url_for('static', filename='js/highcharts.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/toastr.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/util.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/card0_stats.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/requests.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/data_processing.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bar_graph.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/line_graph.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/settings.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/logout.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script src="https://apis.google.com/js/platform.js?onload=onOAuthLoad" async defer></script>
+</body>
+
+</html>
