--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -1,5 +1,17 @@
+<!doctype html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <!-- FAVICON SHIT -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon.ico/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon.ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon.ico/favicon-16x16.png">
+    <link rel="manifest" href="/static/favicon.ico/manifest.json">
+    <link rel="mask-icon" href="/static/favicon.ico/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/static/favicon.ico/favicon.ico">
+    <meta name="msapplication-config" content="/static/favicon.ico/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+    <!-- END FAVICON SHIT -->
     <title>See Progress</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/toastr.min.css') }}" />
