--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -31,6 +31,7 @@
             <div id="settings-title">
                 <h1>Settings</h1>
             </div>
+            <div class="loader">Loading...</div>
             <div class="settings-section-a">
                 <div id="quota-header">
                     <h2 id="quota-title">Daily Quota</h2>
@@ -111,6 +112,7 @@
                 </div>
             </div>
             <div id="today" class="{{ today_section_class }}">
+                <div class="loader">Loading...</div>
                 <div class="sub-today inline">
                     <div class="center-text">
                         <h2>time online today</h2>
