--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/graph.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/settings.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/attach_acc.css') }}">
     <script src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <meta name="google-signin-scope" content="profile email">
@@ -26,6 +27,8 @@
 </head>
 
 <body>
+
+    <!-- SETTINGS -->
     <div id="settings-container" class="hidden">
         <div id="settings-content">
             <div id="settings-title">
@@ -77,6 +80,81 @@
             </div>
         </div>
     </div>
+
+    <!-- CREATE/ATTACH ACCOUNT -->
+    {% if not email %}
+    <div id="attach-acc-container" class="hidden">
+        <div id="attach-acc-content">
+            <div id="close-attach-acc" onclick="closeAttachAcc();">
+                <img height=40 width=40 src="{{ url_for('static', filename='img/x-white.png') }}"/>
+            </div>
+            <div class="attach-acc-header">
+                <div class="inline" style="margin-right: 40px;">
+                    <h6 id="signup-link" class="selected" onclick="selectTab(event, 'signup')">sign up</h6>
+                </div>
+                <div class="inline">
+                    <h6 id="login-link" onclick="selectTab(event, 'login')">login</h6>
+                </div>
+            </div>
+            <div class="attach-acc-main">
+                <div class="default-auth">
+                    <div id="signup">
+                        <div class="attach-acc-description">
+                            <p style="color: #fff;">
+                                All your guest data will be moved to your new account.
+                                If you want to create a separate account,
+                                <a href="javascript:logout();">click here</a>
+                            </p>
+                        </div>
+                        <form name="signup-form" action="/api/signup" onsubmit="return validateSignUp()" method="post">
+                            <input class="auth" type="text" name="email" placeholder="email">
+                            <br>
+                            <input class="auth" type="password" name="password" placeholder="password">
+                            <br>
+                            <input class="auth" type="password" name="password-re" placeholder="password again">
+                            <br>
+                            <input class="auth" type="submit" value="sign up">
+                            <br>
+                            <div id="password-error" class="auth-error hidden">Passwords do not match.</div>
+                            <div id="email-error" class="auth-error hidden">Email is invalid.</div>
+                            <div id="empty-error" class="auth-error hidden">A required field is empty.</div>
+                        </form>
+                    </div>
+                    <div id="login" class="hidden">
+                        <div class="attach-acc-description">
+                            <p style="color: #fff;">
+                                All your guest data will be merged with your account.
+                                If you want to log into a separate account,
+                                <a href="javascript:logout();">click here</a>
+                            </p>
+                        </div>
+                        <form name="login-form" onsubmit="login(); return false;">
+                            <input class="auth" type="text" name="email" placeholder="email">
+                            <br>
+                            <input class="auth" id="login-password" type="password" name="password" placeholder="password">
+                            <br>
+                            <input class="auth" id="login-submit" type="submit" value="login">
+                            <br>
+                            <div id="login-error" class="auth-error hidden">Incorrect password.</div>
+                        </form>
+                    </div>
+                </div>
+                <div class="or center-parent">
+                    <div class="center-child">
+                        <p>or</p>
+                    </div>
+                </div>
+                <div class="google-auth center-parent">
+                    <div class="center-child">
+                        <div id="google-widget"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endif %}
+
+    <!-- MAIN -->
     <div id="body-container">
         <div id="card0" class="full-width">
             <div id="header">
@@ -96,12 +174,12 @@
                     </div>
                     <div class="vert-divider inline"></div>
                     <div class="nav-part inline">
-                        <a id="logout-link" href="#"><h5>log out<h5></a>
+                        <a href="javascript:logout();"><h5>log out<h5></a>
                     </div>
                     {% if not email %}
                     <div class="vert-divider inline"></div>
                     <div class="nav-part inline">
-                        <a href="#"><h5>create an account<h5></a>
+                        <a href="javascript:openAttachAcc();"><h5>create/attach an account<h5></a>
                     </div>
                     {% endif %}
                     <div class="vert-divider inline"></div>
@@ -250,6 +328,7 @@
     <script src="{{ url_for('static', filename='js/line_graph.js') }}"></script>
     <script src="{{ url_for('static', filename='js/settings.js') }}"></script>
     <script src="{{ url_for('static', filename='js/logout.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/attach_acc.js') }}"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     <script src="https://apis.google.com/js/platform.js?onload=onOAuthLoad" async defer></script>
 </body>
