--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -189,66 +189,68 @@
                     </div>
                 </div>
             </div>
-            <div id="today" class="{{ today_section_class }}">
+            <div id="today-wrapper">
                 <div class="loader">Loading...</div>
-                <div class="sub-today inline">
-                    <div class="center-text">
-                        <h2>time online today</h2>
-                    </div>
-                    <div class="center-text">
-                        <div class="inline">
-                            <div class="time-part inline"><h3 id="total-hours"></h3></div>
-                            <div class="time-part inline"><h3 id="total-minutes"></h3></div>
+                <div id="today" class="{{ today_section_class }} hidden">
+                    <div class="sub-today inline">
+                        <div class="center-text">
+                            <h2>time online today</h2>
                         </div>
-                    </div>
-                    <div class="center-text">
-                        <div class="inline">
-                            <div class="label-part inline"><h4>hours</h4></div>
-                            <div class="label-part inline"><h4>minutes</h4></div>
+                        <div class="center-text">
+                            <div class="inline">
+                                <div class="time-part inline"><h3 id="total-hours"></h3></div>
+                                <div class="time-part inline"><h3 id="total-minutes"></h3></div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <!-- <div class="vert-divider inline"></div> -->
-                <div class="sub-today inline">
-                    <div class="center-text">
-                        <h2>unproductive time today</h2>
-                    </div>
-                    <div class="center-text">
-                        <div class="inline">
-                            <div class="time-part inline"><h3 id="unprod-hours"></h3></div>
-                            <div class="time-part inline"><h3 id="unprod-minutes"></h3></div>
-                        </div>
-                    </div>
-                    <div class="center-text">
-                        <div class="inline">
-                            <div class="label-part inline"><h4>hours</h4></div>
-                            <div class="label-part inline"><h4>minutes</h4></div>
-                        </div>
-                    </div>
-                </div>
-                <!-- <div class="vert-divider inline"></div> -->
-                <div id="quota-percent-section" class="sub-today inline {{ quota_streak_section }}">
-                    <div class="circle-container">
-                        <div id="quota-percent-border" class="circle-active-border">
-                            <div class="circle">
-                                <span id="quota-percent" class="percent"></span>
+                        <div class="center-text">
+                            <div class="inline">
+                                <div class="label-part inline"><h4>hours</h4></div>
+                                <div class="label-part inline"><h4>minutes</h4></div>
                             </div>
                         </div>
                     </div>
-                    <div class="center-text">
-                        <h2>of quota</h2>
+                    <!-- <div class="vert-divider inline"></div> -->
+                    <div class="sub-today inline">
+                        <div class="center-text">
+                            <h2>unproductive time today</h2>
+                        </div>
+                        <div class="center-text">
+                            <div class="inline">
+                                <div class="time-part inline"><h3 id="unprod-hours"></h3></div>
+                                <div class="time-part inline"><h3 id="unprod-minutes"></h3></div>
+                            </div>
+                        </div>
+                        <div class="center-text">
+                            <div class="inline">
+                                <div class="label-part inline"><h4>hours</h4></div>
+                                <div class="label-part inline"><h4>minutes</h4></div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <!-- <div class="vert-divider inline"></div> -->
-                <div id="streak-section" class="sub-today inline {{ quota_streak_section }}">
-                    <div class="center-text">
-                        <h2>streak</h2>
+                    <!-- <div class="vert-divider inline"></div> -->
+                    <div id="quota-percent-section" class="sub-today inline {{ quota_streak_section }}">
+                        <div class="circle-container">
+                            <div id="quota-percent-border" class="circle-active-border">
+                                <div class="circle">
+                                    <span id="quota-percent" class="percent"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="center-text">
+                            <h2>of quota</h2>
+                        </div>
                     </div>
-                    <div class="center-text">
-                        <h3 id="streak-val"></h3>
-                    </div>
-                    <div class="center-text">
-                        <h4>days</h4>
+                    <!-- <div class="vert-divider inline"></div> -->
+                    <div id="streak-section" class="sub-today inline {{ quota_streak_section }}">
+                        <div class="center-text">
+                            <h2>streak</h2>
+                        </div>
+                        <div class="center-text">
+                            <h3 id="streak-val"></h3>
+                        </div>
+                        <div class="center-text">
+                            <h4>days</h4>
+                        </div>
                     </div>
                 </div>
             </div>
