--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -221,16 +221,27 @@
     color: #888;
 }
 
-#logo h1 {
+.logo h1 {
     font-family: Sinkin-Sans300Light;
     font-size: 40px;
 }
 
-#logo1 {
+.logo h2 {
+    font-family: Sinkin-Sans300Light;
+    font-size: 30px;
+    margin: 8px 0px 0px 5px;
+}
+
+.logo1 {
     color: #ffffff;
 }
 
-#logo2 {
+h1.logo2 {
+    margin-left: -4px;
+    color: #31c4e9;
+}
+
+h2.logo2 {
     margin-left: -4px;
     color: #31c4e9;
 }
