--- a/server/static/css/graph.css
+++ b/server/static/css/graph.css
@@ -34,7 +34,6 @@ a h5 {
 }
 
 body {
-    /*background-color: #ECF1F4;*/
     background-color: #000;
     height: 100%;
 }
@@ -46,16 +45,11 @@ body {
 /* ~~~ FIRST CARD ~~~ */
 #card0 {
     background-color: #2d333c;
-    /*height: 350px;*/
-    /*padding: 10px 20px 20px 20px;*/
     width: 100%;
 }
 
 #header {
     padding: 10px 20px 20px 20px;
-    /*height: 50px;*/
-    /*line-height: 50px;*/
-    /*text-align: left;*/
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -71,22 +65,23 @@ body {
 }
 
 #today {
-    padding: 10px 20px 20px 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 #today-wrapper {
+    width: 960px;
+    margin: 0px auto;
     padding: 50px 0px 20px;
 }
 
 .today {
-    margin: 0px 20%;
+    padding: 10px 20px 20px;
 }
 
 .today-no-quota {
-    margin: 0px 35%;
+    padding: 10px 180px 20px;
 }
 
 .nav-part {
@@ -95,11 +90,6 @@ body {
 }
 
 .sub-today {
-    /*width: 24.5%; /* for some reason 25% doesnt work -.- */
-    /*margin: 0px;*/
-    /*padding: 40px 20px 10px;*/
-    /*height: 270px; /* 350 - 50 - 30*/
-    /*vertical-align: top;*/
 }
 
 .time-part {
@@ -214,7 +204,6 @@ body {
 }
 
 #chart1-container {
-  /*margin-top: 100px;*/
 }
 
 #hostnameCheckboxes {
@@ -269,14 +258,13 @@ body {
     color: #bbbbbb;
 }
 
-@media only screen
-and (max-width : 1300px) {
-    .today {
-        margin: 0px 10%;
+@media only screen and (max-width : 960px) {
+    #body-container {
+        width: 960px;
     }
 }
 
-@media only screen
+/*@media only screen
 and (max-width : 950px) {
     #mobile-header {
         display: block;
@@ -289,9 +277,9 @@ and (max-width : 950px) {
     .today {
         margin: 0px 10px;
     }
-
+*/
     /* BOOTSTRAP COLLAPSING MENU SHIT */
-    .navbar-header {float: none;}
+    /*.navbar-header {float: none;}
     .navbar-left,.navbar-right {float: none !important;}
     .navbar-toggle {display: block;}
     .navbar-collapse {
@@ -304,9 +292,4 @@ and (max-width : 950px) {
     .navbar-nav>li {float: none;}
     .navbar-nav>li>a {padding-top: 10px; padding-bottom: 10px;}
     .collapse.in{display:block !important;}
-}
-
-@media only screen
-and (max-width : 700px) {
-
-}
+}*/
